[workspace]
resolver = "2"
members = [
	"compositor",
	"wm",
]

[workspace.package]
edition = "2021"
rust-version = "1.70"
# license = 
version = "0.0.1"
authors = ["i509VCB <mail@i509.me>"]
repository = "https://github.com/i509VCB/aerugo"

[workspace.dependencies.clap]
version = "4.0.32"
features = [
	"derive",
	"wrap_help"
]

[workspace.dependencies.smithay]
git = "https://github.com/Smithay/smithay"
rev = "a4727cd5cc483821ab7b8a8aa7d17bea013d0282"
default-features = false
features = [
	"backend_egl",
	"backend_gbm",
	"backend_vulkan",
	"backend_x11",
	"desktop",
	"renderer_gl",
	"renderer_glow",
    "wayland_frontend",
	"xwayland",
]

[workspace.dependencies.wayland-client]
version = "0.30.1"

[workspace.dependencies.wayland-backend]
version = "0.1.1"

[workspace.dependencies.wayland-scanner]
version = "0.30.0"

[workspace.dependencies.wayland-server]
version = "0.30.0"

[workspace.dependencies.calloop]
# TODO: Smithay upstream needs a newer calloop
version = "0.10.6"
features = ["executor"]

[workspace.dependencies.nix]
version = "0.26.2"

[workspace.dependencies.aerugo-wm]
path = "wm"

[workspace.dependencies]
ashpd = "0.4.0"
bitflags = "2.3.3"
downcast-rs = "1.2.0"
once_cell = "1.17.1"
slotmap = "1.0.6"
rustc-hash = "1.1.0"
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
zbus = "3.7.0"

# Enable LTO during release to make the binaries a bit smaller
[profile.release]
lto = true
opt-level = 3
strip = true
