[package]
name = "wayland_compositor"
version = "0.1.0"
authors = [ "i509VCB <git@i509.me>" ]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
clap = { version = "3.0.0-beta.5", features = [ "derive" ] }
slog = "2.1.1"
slog-term = "2.8"
slog-async = "2.2"
slog-stdlog = "4.1.0"
slog-scope = "4.4.0"
downcast-rs = "1.2.0"
directories = "4.0.1"

ash = "0.35.0"
once_cell = "1.9"

[dependencies.smithay]
git = "https://github.com/Smithay/smithay/"
default-features = false
features = [
    # Renderer
    "renderer_gl",

    # Standard features
    "use_system_lib",
    "wayland_frontend",
]

# Platform dependencies for the config watcher
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.23.0" }

[features]
# TODO:
# - Enable udev backend when done.
# - Enable wayland backend when implemented.
# - XWayland
default = [
    ## Backends
    "x11_backend",
    #"wayland_backend",
    "udev_backend"
]

# X11 backend to run as an X11 client.
x11_backend = [ "smithay/backend_x11" ]

# Wayland backend to run as a Wayland client.
wayland_backend = []

# Udev tty backend
udev_backend = [ "smithay/backend_session" ]

logind = ["smithay/backend_session_logind"]
elogind = ["smithay/backend_session_elogind"]
libseat = ["smithay/backend_session_libseat"]

# XWayland
xwayland = [ "smithay/xwayland", "smithay/x11rb_event_source" ]
