[package]
name = "aerugo-comp"
version = "0.1.0"
edition = "2021"
authors = [
    "i509VCB <mail@i509.me>"
]

[dependencies]
bitflags = { workspace = true }
calloop = { workspace = true }
clap = { workspace = true }
downcast-rs = { workspace = true }
rustc-hash = { workspace = true }
smithay = { workspace = true }
slotmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wayland-server = { workspace = true }
wayland-scanner = { workspace = true }
wm-runtime = { workspace = true }
