[package]
name = "aerugo-wm"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { workspace = true }
euclid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wayland-client = { workspace = true }
wayland-backend = { workspace = true }
wayland-scanner = { workspace = true }
static_assertions = { workspace = true }
