[package]
name = "aerugo_framework"
version = "0.1.0"
authors = [ "i509VCB <git@i509.me>" ]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
slog = "2.1.1"
downcast-rs = "1.2.0"
directories = "4.0.1"

bitflags = "1.3.2"
thiserror = "1.0.30"
ash = { version = "0.37.0", features = ["debug"] }
once_cell = "1.9"
cgmath = "0.18.0"

[dependencies.smithay]
git = "https://github.com/Smithay/smithay/"
branch = "rework-wayland-rs-0.30"
default-features = false
features = [
    "renderer_gl",
    "wayland_frontend",
]

[dev-dependencies]
slog-term = "2.8"

# Platform dependencies for the config watcher
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.23.0" }

[features]
# TODO:
# - Enable udev backend when done.
# - Enable wayland backend when implemented.
# - XWayland
default = [
    ## Backends
    "x11_backend",
    #"wayland_backend",
    "udev_backend"
]

# X11 backend to run as an X11 client.
x11_backend = [ "smithay/backend_x11" ]

# Wayland backend to run as a Wayland client.
wayland_backend = []

# Udev tty backend
udev_backend = [ "smithay/backend_session" ]

logind = ["smithay/backend_session_logind"]
elogind = ["smithay/backend_session_elogind"]
libseat = ["smithay/backend_session_libseat"]

# XWayland
xwayland = [ "smithay/xwayland", "smithay/x11rb_event_source" ]
